--- a/.github/workflows/api-security.yml
+++ b/.github/workflows/api-security.yml
@@ -14,11 +14,6 @@ jobs:
         image: vulnerables/web-dvwa
         ports:
           - 80:80
-        options: >-
-          --health-cmd="curl -f http://localhost/login.php || exit 1"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=10
 
     steps:
       - name: Checkout repository
@@ -55,26 +50,29 @@ jobs:
 
       - name: Wait for DVWA to be ready
         run: |
-          for i in {1..10}; do
-            curl -s http://localhost/login.php && break
-            echo "Waiting for DVWA..."
-            sleep 5
+          for i in {1..30}; do
+            if curl -fsS http://localhost/login.php >/dev/null; then
+              echo "DVWA is up!"
+              exit 0
+            fi
+            echo "Waiting for DVWA... ($i/30)"
+            sleep 3
           done
+          echo "DVWA did not become ready in time"
+          docker ps -a || true
+          exit 1
 
       - name: Run Schemathesis (schema-based testing)
         run: |
           schemathesis run \
-            http://localhost \
             --schema openapi/dvwa.yaml \
+            --base-url http://localhost \
             --checks all \
             --hypothesis-max-examples 50 \
             --report json \
             --report-file schemathesis-report.json
         continue-on-error: true
 
-      # --------------------
-      # Artifacts
-      # --------------------
       - name: Upload API security reports
         uses: actions/upload-artifact@v4
         with:
